--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ buildscript {
         junitVersion = "4.12"
         okhttpVersion = "3.12.0"
         jsonPathVersion = "2.4.0"
+        springCloudVersion = "Finchley.RELEASE"
+        springCloudServicesClientLibrariesVersion = "2.0.2.RELEASE"
     }
 
     repositories {
@@ -28,6 +30,7 @@ buildscript {
 }
 
 apply plugin: DependenciesGraphPlugin
+apply plugin: "io.spring.dependency-management"
 
 subprojects {
     group "io.pivotal.pal.tracker"
@@ -45,7 +48,7 @@ subprojects {
         compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
         compile "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
         compile "org.slf4j:slf4j-api:$slf4jVersion"
-
+        compile "org.springframework.boot:spring-boot-starter-security:$springBootVersion"
         testCompile "junit:junit:$junitVersion"
         testCompile "org.mockito:mockito-core:$mockitoVersion"
         testCompile "org.assertj:assertj-core:$assertJVersion"
