--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -5,7 +5,6 @@ applications:
   - route: allocations-pal-harsha.cfapps.io
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-harsha.cfapps.io
   services:
   - tracker-allocations-database
+  - tracker-service-registry
