--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -5,7 +5,6 @@ applications:
   - route: backlog-pal-harsha.cfapps.io
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-harsha.cfapps.io
   services:
   - tracker-backlog-database
+  - tracker-service-registry
