--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -5,7 +5,6 @@ applications:
   - route: timesheets-pal-harsha.cfapps.io
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-harsha.cfapps.io
   services:
   - tracker-timesheets-database
+  - tracker-service-registry
