--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,11 @@
 rootProject.name = "pal-tracker-distributed"
 
+include "platform-services:eureka-server"
 include "applications:allocations-server"
 include "applications:backlog-server"
 include "applications:registration-server"
 include "applications:timesheets-server"
+
 
 include "components:accounts"
 include "components:allocations"
