--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,9 @@ jobs:
         mariadb: '10.2'
       install: skip
       before_script:
-        - "export JAVA_OPTS=-Xmx1g"
+        - echo "Testing GC overhead solution"
+        - "export JAVA_OPTS=-Xmx1g -XX:-UseGCOverheadLimit"
+        - echo "Testing GC overhead solution completed"
         - mysql -uroot < databases/create_databases.sql
         - ./gradlew testMigrate
       script: ./gradlew clean build
@@ -39,7 +41,7 @@ jobs:
     - stage: deploy
       language: java
       script:
-        - "export JAVA_OPTS=-Xmx1g"
+        - "export JAVA_OPTS=-Xmx2g -XX:-UseGCOverheadLimit"
         - echo "Downloading allocations server $RELEASE_TAG"
         - wget -P applications/allocations-server/build/libs https://github.com/$GITHUB_USERNAME/pal-tracker-distributed/releases/download/$RELEASE_TAG/allocations-server.jar
       before_deploy:
